test/spec_vectors/local_get/fail/module_4.wat
(module (func $type-param-num-vs-num (param i32) (result i64) (local.get 0)))